bumped up size of .pluginTinyText for readability (issue 469)

--- a/public_html/layout/nouveau/style.css
+++ b/public_html/layout/nouveau/style.css
@@ -1319,7 +1319,7 @@ padding:4px 6px;
 }
 
 .pluginTinyText {
-font-size:.8em;
+font-size:.9em;
 }
 
 .pluginMediumText {
